--- a/Polyglot Pro/Resources/Languages/Swedish/sv_expressions_business.json
+++ b/Polyglot Pro/Resources/Languages/Swedish/sv_expressions_business.json
@@ -1686,7 +1686,7 @@
                         "text": "Las oportunidades de negocio pueden surgir en cualquier momento."
                     },
                     {
-                        "language": "g German",
+                        "language": "german",
                         "text": "Geschäftsmöglichkeiten können jederzeit entstehen."
                     },
                     {
